--- a/get-user.html
+++ b/get-user.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/ajax.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/get-user.js" defer></script>
     <title>AJAX</title>
 </head>
-<body onload="loaded()">
+<body>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -20,5 +22,8 @@
         <tbody id="tbody">
         </tbody>
     </table>
+    <div>
+        <button id="remove" class="btn btn-primary">Delete</button>
+    </div>
 </body>
 </html>
