--- a/get-users.html
+++ b/get-users.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/ajax.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/get-users.js" defer></script>
     <title>AJAX</title>
 </head>
-<body onload="get_users()">
-    <table class="table table-striped">
+<body>
+    <table class="table table-striped table-sm">
         <thead>
             <tr>
                 <th>Id</th>
@@ -15,7 +17,7 @@
                 <th>Phone</th>
                 <th>Reviewer?</th>
                 <th>Admin?</th>
-                <td>Actions</td>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody id="tbody">
