--- a/put-user.html
+++ b/put-user.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/ajax.css">
     <script src="js/put-user.js" defer></script>
     <title>AJAX</title>
 </head>
@@ -38,7 +39,7 @@
         </tbody>
     </table>
     <div>
-        <button onclick="save()">Save</button>
+        <button onclick="save()" class="btn btn-primary">Save</button>
     </div>
 </body>
 </html>
