--- a/put-user.html
+++ b/put-user.html
@@ -2,44 +2,67 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/ajax.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/put-user.js" defer></script>
     <title>AJAX</title>
 </head>
-<body onload="loaded()">
-    <table>
-        <tbody id="tbody">
-            <tr><td>Id</td>
-                <td><input id="pid" type="text" disabled></td>
-            </tr>
-            <tr><td>First Name</td>
-                <td><input id="pfirstname"></td>
-            </tr>
-            <tr><td>Last Name</td>
-                <td><input id="plastname"></td>
-            </tr>
-            <tr><td>Username</td>
-                <td><input id="pusername"></td>
-            </tr>
-            <tr><td>Password</td>
-                <td><input id="ppassword" type="password"></td>
-            </tr>
-            <tr><td>Phone</td>
-                <td><input id="pphone"></td>
-            </tr>
-            <tr><td>Email</td>
-                <td><input id="pemail"></td>
-            </tr>
-            <tr><td>Reviewer</td>
-                <td><input id="previewer" type="checkbox"></td>
-            </tr>
-            <tr><td>Admin</td>
-                <td><input id="padmin" type="checkbox"></td>
-            </tr>
-        </tbody>
-    </table>
-    <div>
-        <button onclick="save()" class="btn btn-primary">Save</button>
+<body>
+    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">PRS</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="../ajax/get-users.html">Users</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../ajax-vendors/get-vendors.html">Vendors</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <h3>Edit User</h3>
+    <div class="wrapper">
+        <table>
+            <tbody id="tbody">
+                <tr><td>Id</td>
+                    <td><input id="pid" type="text" disabled></td>
+                </tr>
+                <tr><td>First Name</td>
+                    <td><input id="pfirstname"></td>
+                </tr>
+                <tr><td>Last Name</td>
+                    <td><input id="plastname"></td>
+                </tr>
+                <tr><td>Username</td>
+                    <td><input id="pusername"></td>
+                </tr>
+                <tr><td>Password</td>
+                    <td><input id="ppassword" type="password"></td>
+                </tr>
+                <tr><td>Phone</td>
+                    <td><input id="pphone"></td>
+                </tr>
+                <tr><td>Email</td>
+                    <td><input id="pemail"></td>
+                </tr>
+                <tr><td>Reviewer</td>
+                    <td><input id="previewer" type="checkbox"></td>
+                </tr>
+                <tr><td>Admin</td>
+                    <td><input id="padmin" type="checkbox"></td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <button onclick="save()" class="btn btn-primary">Save</button>
+        </div>
+        <a href="get-users.html" class="go-back">Go Back?</a>
     </div>
 </body>
 </html>
